# VorpalEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mingw.toolchain  notes.txt  plans.md  resume.sh  run.sh
assets/: compile.sh  fuck you windows.txt  shader.frag  shader.vert
assets/models/: Cube.glb  Cube.gltf  Cube_B.glb  cube.mtl  fallback.glb  flatgrass.gltf  male_07.glb  male_07.gltf  male_07_test.glb  skybox.glb
assets/models/wip/: floor.gltf
assets/scripts/: demo.lua  game.lua  scene2.lua
assets/shaders/: 2d.frag  2d.vert  compile.sh  frag.spv  shader.frag  shader.vert  shadow.vert.spv  shadow_skinned.vert.spv  skinned.vert.spv  sky.frag.spv  sky.vert.spv  ui.frag.spv  vert.spv  vert2D.spv
assets/shaders/src/: common.glsl  compile.sh  shader.frag  shader.vert  shadow.vert  shadow_skinned.vert  skinned.vert  sky.frag  sky.vert  ui.frag
include/: config.h
include/Engine/: Animation.hpp  AudioManager.hpp  Camera.hpp  DebugMesh.hpp  Engine.h  Engine.hpp  FrustumCull.h  FrustumCull.hpp  Loader.hpp  LuaManager.hpp  LuaScene.hpp  Mesh3D.hpp  Node3D.hpp  PhysicsManager.hpp  Platform.h  Renderer.hpp  Renderpass.hpp  Scene.hpp  SkinnedMesh3D.hpp  Texture.hpp  Vertex.hpp  Window.h  Window.hpp  WindowSystem.hpp
include/Game/: ErrorScene.hpp  MainScene.hpp  MenuScene.hpp  TestScene.hpp
include/VK/: Instance.h  Validation.h  Validation.hpp
src/: Mesh3D.cpp  main.cpp
src/Engine/: AudioManager.cpp  Engine.cpp  FrustumCull.cpp  LuaManager.cpp  LuaScene.cpp  SkinnedMesh3D.cpp  Texture.cpp  Window.cpp  Window.hpp
src/Platform/: Platform.cpp  Platform.hpp
wip/: Animation.hpp  example.c  test.c  test.cpp
